--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="content">
                                 <h2>I am a Software Developer</h2>
-                                <p>And I'm a Software Technology undergraduate🎓 at the University of Vocational Technology, Sri Lanka🏛. 
+                                <p>And Software Technology undergraduate🎓 at the University of Vocational Technology, Sri Lanka🏛. 
                                     I'm a passionate learner who's always willing to learn and work across technologies💡. 
                                     I love to explore new technologies and leverage them to solve real-life problems🎯.</p>
                             </div>
