--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                   <div class="content-right">
                     <ul class="timeline">
                       <li>
+                        <h4>HyperFlex Innovation Pvt Ltd</h4>
+                        <span>Software Engineer - Intern (2024 - Now)</span>
+                      </li>
+                      <li>
                         <h4>DigiBiz Online Solutions</h4>
                         <span>Software Developer (2019 - 2020) | 6 months</span>
                       </li>
