--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <ul class="timeline">
                       <li>
                         <h4>HyperFlex Innovation Pvt Ltd</h4>
-                        <span>Software Engineer - Intern (2024 - Now)</span>
+                        <span>Software Engineer - Associate (2024 - Now)</span>
                       </li>
                       <li>
                         <h4>DigiBiz Online Solutions</h4>
